--- a/templates/scr/chart_weekly.html
+++ b/templates/scr/chart_weekly.html
@@ -117,6 +117,7 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+{{ xticks|json_script:"xticks" }}
 <script>
     {% if media == "gn" %}
         const scale_y_1 = 1200
@@ -359,15 +360,17 @@
         {% endif %}
     ]
 
-    const list = [];
-    {% for i in xticks %}
-    list.push("{{i}}")
-    {% endfor %}
+    // const xticks_list = [];
+    // {% for i in xticks %}
+    // xticks_list.push("{{i}}")
+    // {% endfor %}
+    const xticks_list = JSON.parse(document.getElementById('xticks').textContent);
+
 
     new Chart(document.getElementById("chart"), {
         type: "bar",
         data: {
-            labels: list,
+            labels: xticks_list,
             datasets: datasets1,
         },
         options: {
@@ -400,7 +403,7 @@
     new Chart(document.getElementById("chart2"), {
         type: "bar",
         data: {
-            labels: list,
+            labels: xticks_list,
             datasets: datasets2,
         },
         options: {
@@ -442,7 +445,7 @@
     new Chart(document.getElementById("chart3"), {
         type: "bar",
         data: {
-            labels: list,
+            labels: xticks_list,
             datasets: datasets3,
                 },
                 options: {
@@ -486,7 +489,7 @@
     new Chart(document.getElementById("chart4"), {
         type: "bar",
         data: {
-            labels: list,
+            labels: xticks_list,
             datasets: datasets4,
                 },
                 options: {
@@ -531,7 +534,7 @@
     new Chart(document.getElementById("chart5"), {
         type: "bar",
         data: {
-            labels: list,
+            labels: xticks_list,
             datasets: datasets5,
                 },
                 options: {
